samples/_failures_safe/1761280621_1267e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a89f02d.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_2a89f02d.c:188:5: error: expected expression at end of input
  188 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_2a89f02d.c:188:5: error: expected declaration or statement at end of input
